# Project_RedTooth

./: .gitignore  README.md  build_all.ps1  registry.db
cpp_core/: CMakeLists.txt
cpp_core/include/: AudioEngine.h  AudioManager.h  BluetoothManager.h  ConnectionPool.h  DeviceScanner.h  ProfileManager.h  Watchdog.h
cpp_core/src/: AudioEngine.cpp  AudioManager.cpp  BluetoothManager.cpp  ConnectionPool.cpp  DeviceScanner.cpp  ProfileManager.cpp  Watchdog.cpp  main.cpp
rust_cli/: Cargo.toml  build.rs
rust_cli/src/: bluetooth.rs  config.rs  error.rs  ffi.rs  gui.rs  main.rs  registry.rs
