[package]
name = "btmanager"
version = "0.1.0"
edition = "2021"

[dependencies]
# tui = "0.19"
# crossterm = "0.27"
eframe = "0.24"
egui = "0.24"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4"
toml = "0.5"
rusqlite = { version = "0.29", features = ["bundled"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "impl-default"] }

[build-dependencies]
cc = "1.0"
cmake = "0.1"
